Fixed Header align bug.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,7 +34,7 @@ body{
   font-size: 24px;
   padding-left: 60px;
   display: flex;
-  align-items: le;
+  align-items: center;
   flex: none;
   color: #00acee;
   
